External/Releases/A/6-100/V2024.04.01/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 11, 2024, Monday, April 1st)

**Tag:** `V2024.04.01`

**Released on:** `2024, Monday, April 1st at 5:50 pm PST`

***Pre-release***

This is the 11th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the eighth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

---

## What's Changed (manually written by @seanpm2001)

- Archives: Archived data for release 10, archived data for discussion 81, archived files related to the 11th remodel
- README: Updated README to version 85
- New media: logos (official and placeholder) for `AquariOS` `BathHouseOS` `BootDown` `MCPYE` and `Tetris128`
- Other: No other changes

***
